--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,98 @@
+:root {
+  --bg-primary: #2c343a;
+  --bg-secondary: #ffffff;
+  --bg-blue: #5f9ea0;
+  --bg-red: #eb5a5a;
+  --bg-secondary-hover: #f1f3f7;
+}
+
+.main-container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg-primary);
+}
+
+.field-container{
+  /* width: 950px;
+  height: 600px; */
+  width: 1200px;
+  height: 800px;
+  position: relative;
+  background-color: #282c34;
+}
+
+.field-background {
+  background: url(./assets/images/empty_field.svg) no-repeat;
+  background-color: #282c34;
+  background-position: center;
+  background-size: contain;
+  width: 80%;
+  height: 60%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.board {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* right: 0;
+  bottom: 0; */
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(211, 211, 211, 0.5); */
+  z-index: 1000;
+  display: grid;
+  /* grid-template-rows: repeat(30, 1fr);
+  grid-template-columns: repeat(60, 1fr); */
+  grid-template-rows: repeat(40, 20px);
+  grid-template-columns: repeat(60, 20px);
+}
+
+.player {
+  grid-column-start: 4;
+  grid-column-end: 6;
+  grid-row-start: 15;
+  grid-row-end: 17;
+  width: 90%;
+  height: 70%;
+  aspect-ratio: 1 1;
+  background-color: cadetblue;
+  border-radius: 50%;
+  margin: auto;
+}
+
+.playerOnSpot {
+  background-color: #5f9ea0;
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  margin: auto;
+  outline: 1px dashed cadetblue;
+  outline-offset: 8px;
+}
+
+.space {
+  /* border-right: 1px dashed #646464;
+  border-bottom: 1px dashed #646464;
+  border-left: none;
+  border-top: none; */
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
