--- a/src/App.css
+++ b/src/App.css
@@ -23,111 +23,21 @@
   width: 1200px;
   height: 800px;
   position: relative;
-  background-color: #282c34;
+  background-color: var(--bg-primary);;
 }
 
 .field-background {
   background: url(./assets/images/empty_field.svg) no-repeat;
-  background-color: #282c34;
+  background-color: var(--bg-primary);
   background-position: center;
   background-size: contain;
   width: 80%;
   height: 60%;
 }
 
-img {
+img.field {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
-}
-
-.board {
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* right: 0;
-  bottom: 0; */
-  width: 100%;
-  height: 100%;
-  /* background-color: rgba(211, 211, 211, 0.5); */
-  z-index: 1000;
-  display: grid;
-  /* grid-template-rows: repeat(30, 1fr);
-  grid-template-columns: repeat(60, 1fr); */
-  grid-template-rows: repeat(40, 20px);
-  grid-template-columns: repeat(60, 20px);
-}
-
-.player {
-  grid-column-start: 4;
-  grid-column-end: 6;
-  grid-row-start: 15;
-  grid-row-end: 17;
-  width: 90%;
-  height: 70%;
-  aspect-ratio: 1 1;
-  background-color: cadetblue;
-  border-radius: 50%;
-  margin: auto;
-}
-
-.playerOnSpot {
-  background-color: #5f9ea0;
-  width: 60%;
-  height: 60%;
-  border-radius: 50%;
-  margin: auto;
-  outline: 1px dashed cadetblue;
-  outline-offset: 8px;
-}
-
-.space {
-  /* border-right: 1px dashed #646464;
-  border-bottom: 1px dashed #646464;
-  border-left: none;
-  border-top: none; */
-  border: none;
-  background: none;
-  cursor: pointer;
-  padding: 0;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
