--- a/src/components/Toolbar.module.css
+++ b/src/components/Toolbar.module.css
@@ -1,7 +1,7 @@
 .toolbar {
   background-color: var(--bg-secondary);
   border-radius: 40px;
-  padding: 5px 30px;
+  padding: 10px 30px;
 }
 
 .toolbar ul {
@@ -9,13 +9,30 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin: 0;
   padding: 0;
 }
 
+.toolbar li {
+  padding: 0 5px;
+}
+
+.toolbar h3 {
+  font-weight: 100;
+}
+
+.toolbar img {
+  width: 32px;
+  height: 32px;
+  filter: invert(19%) sepia(6%) saturate(1406%) hue-rotate(163deg) brightness(93%) contrast(92%);
+}
+
 .toolbarBtn {
+  display: flex;
+  align-items: center;
   outline: none;
-  border: 0;
+  border: 1px solid transparent;
   padding: 10px;
   border-radius: 50%;
   background-color: var(--bg-secondary);
@@ -24,4 +41,20 @@
 
 .toolbarBtn:hover {
   background-color: var(--bg-secondary-hover);
+}
+
+.active {
+  border: 1px solid transparent;
+}
+
+.activeBlue {
+  border-color: var(--bg-blue);
+}
+
+.activeRed {
+  border-color: var(--bg-red);
+}
+
+.activeBall {
+  border-color: var(--bg-primary);
 }
