--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -27,11 +27,24 @@
 }
 
 .playerOnSpot {
-  width: 100%;
-  height: 100%;
+  width: 240%;
+  height: 240%;
   border-radius: 50%;
   margin: auto;
-  outline-offset: 8px;
+  outline-offset: 2px;
+  margin-left: -50%;
+  margin-top: -50%;
+}
+
+.playerOnSpotNumber {
+  bottom: 50%;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: x-large;
+  color: var(--bg-secondary);
+  font-family: arial, sans-serif;
+  font-weight: bold;
 }
 
 .team1 {
