--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -2,11 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  /* right: 0;
-  bottom: 0; */
   width: 100%;
   height: 100%;
-  /* background-color: rgba(211, 211, 211, 0.5); */
   z-index: 1000;
   display: grid;
   /* grid-template-rows: repeat(30, 1fr);
@@ -15,36 +12,31 @@
   grid-template-columns: repeat(60, 20px);
 }
 
-.space {
-  /* border-right: 1px dashed #646464;
-  border-bottom: 1px dashed #646464;
-  border-left: none;
-  border-top: none; */
+.spot {
+  position: relative;
   border: none;
   background: none;
   cursor: pointer;
   padding: 0;
 }
 
-.playerOnSpot {
-  width: 240%;
-  height: 240%;
+.player {
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
   border-radius: 50%;
   margin: auto;
   outline-offset: 2px;
-  margin-left: -50%;
-  margin-top: -50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.playerOnSpotNumber {
-  bottom: 50%;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  font-size: x-large;
+.playerNumber {
+  font-size: 20px;
   color: var(--bg-secondary);
-  font-family: arial, sans-serif;
-  font-weight: bold;
 }
 
 .team1 {
@@ -58,7 +50,12 @@
 }
 
 .ball {
+  background-image: url("../assets/images/ball.png");
+  background-size: contain;
   background-color: var(--bg-secondary);
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
+  position: unset;
+  top: -50%;
+  left: -50%;
 }
