--- a/src/components/Toolbar.module.css
+++ b/src/components/Toolbar.module.css
@@ -1,7 +1,9 @@
 .toolbar {
+  display: flex;
+  justify-content: space-between;
   background-color: var(--bg-secondary);
   border-radius: 40px;
-  padding: 10px 30px;
+  padding: 0 30px;
 }
 
 .toolbar ul {
@@ -18,8 +20,12 @@
   padding: 0 5px;
 }
 
-.toolbar h3 {
+.toolbar h3, .toolbar h4 {
   font-weight: 100;
+}
+
+.unsaved {
+  font-style: italic;
 }
 
 .toolbar img {
@@ -43,6 +49,10 @@
   background-color: var(--bg-secondary-hover);
 }
 
+.toolbarBtn:disabled {
+  opacity: .5;
+}
+
 .active {
   border: 1px solid transparent;
 }
@@ -57,4 +67,41 @@
 
 .activeBall {
   border-color: var(--bg-primary);
+}
+
+.disabled {
+  pointer-events: none;
+}
+
+.menu {
+  margin-left: 100px !important;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  background-color: var(--bg-secondary);
+  width: max-content;
+  border-radius: 0 10px 10px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  padding: 12px 16px;
+  z-index: 2000;
+}
+
+.dropdown:hover .dropdownContent {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdownContent button {
+  /* color: var(--bg-primary);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block; */
+  padding: 10px 30px !important;
+  border-radius: 0 !important;
 }
