--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -6,9 +6,12 @@
   height: 100%;
   z-index: 1000;
   display: grid;
-  /* grid-template-rows: repeat(30, 1fr);
-  grid-template-columns: repeat(60, 1fr); */
   grid-template-rows: repeat(40, 20px);
+  grid-template-columns: 1fr;
+}
+
+.row {
+  display: grid;
   grid-template-columns: repeat(60, 20px);
 }
 
@@ -18,6 +21,8 @@
   background: none;
   cursor: pointer;
   padding: 0;
+  width: 20px;
+  height: 20px;
 }
 
 .player {
@@ -35,7 +40,7 @@
 }
 
 .playerNumber {
-  font-size: 20px;
+  /* font-size: 20px; */
   color: var(--bg-secondary);
 }
 
