Handle remove arrow and remove element from arrows menu

--- a/src/components/ArrowsMenu.module.css
+++ b/src/components/ArrowsMenu.module.css
@@ -30,6 +30,10 @@
   cursor: pointer;
 }
 
+.item.active button {
+  background-color: var(--bg-primary);
+}
+
 .item button:hover {
   background-color: var(--bg-primary);
 }
